# ZEngineDemo Module
# This is your game module, similar to Unreal Engine's game modules

set(TARGET_NAME ZEngineDemo)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# source files
file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "*.h" "*.inl")
file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "*.cpp")

# Organize files
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${HEADER_FILES} ${SOURCE_FILES})

# Create library
# Use SHARED library so it can be dynamically loaded by Editor
add_library(${TARGET_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 20)
set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Game")

# Set library output directory
# Output to project's build directory for easy access by Editor
set_target_properties(${TARGET_NAME} PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/source/${TARGET_NAME}"
)

# Link to engine runtime
target_link_libraries(${TARGET_NAME} PUBLIC ZRuntime)

# Include directories
target_include_directories(${TARGET_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:include>
)

# Include generated reflection files
# Reflection code is generated by ZParser during build
# Generated files are in PROJECT_ROOT_DIR/_generated/reflection
set(GENERATED_REFLECTION_DIR "${PROJECT_ROOT_DIR}/_generated/reflection")
if(EXISTS ${GENERATED_REFLECTION_DIR})
    file(GLOB_RECURSE GENERATED_REFLECTION_FILES CONFIGURE_DEPENDS "${GENERATED_REFLECTION_DIR}/*.h")
    if(GENERATED_REFLECTION_FILES)
        target_sources(${TARGET_NAME} PRIVATE ${GENERATED_REFLECTION_FILES})
        target_include_directories(${TARGET_NAME} PUBLIC ${GENERATED_REFLECTION_DIR})
        source_group(TREE "${GENERATED_REFLECTION_DIR}" FILES ${GENERATED_REFLECTION_FILES})
    endif()
endif()

